changed background image

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ h3 {
   width: 100%;
   height: 69vh;
   padding-top: 21vh;
-  background-image: url('https://svgshare.com/i/5fh.svg');
+  background-image: url('/sunset.svg');
 }
 
 
