--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ h3 {
   height: 69vh;
   padding-top: 21vh;
   background-image: url('/sunset.svg');
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 
