--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,10 @@ h3 {
   text-align: center;
   color: white;
   border-radius: 12px;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.3);
   max-width: 50vh;
   padding: 1vh;
+  filter: hue-rotate(45deg)
 }
 
 
@@ -71,6 +72,8 @@ h3 {
   background-image: url('/sunset.svg');
   background-repeat: no-repeat;
   background-size: 100%;
+  filter: hue-rotate(325deg);
+  
 }
 
 
@@ -130,7 +133,7 @@ h3 {
 	display: flex;
 }
 
-#flexboxContainer  div {
+#flexboxContainer  flex-item {
 	background-color: var(--main-background);
 	width: 50%;
 	text-align: center;
