--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* CSS rules that apply to many elements */
 :root {
   --main-background: #36393e;
   --alternate-background-a: #2f3136;
@@ -6,17 +7,11 @@
   --text-color-main: #eeeeee;
 }
 
-@keyframes colorshift {
-  0%   { filter: hue-rotate(0deg); }
-  50% { filter: hue-rotate(365deg); }
-  100% {filter: hue-rotate(0deg);}
-}
-
-
 * {
   margin: 0;
   padding: 0;
   font-family: lato;
+  color: var(--text-color-main);
 }
 
 h4, p {
@@ -31,22 +26,28 @@ h3 {
   line-height: 0;
 }
 
-#staff{
-  width: 75%;
-  margin: auto;
-  
-}
-#staff tr:nth-child(even){background-color: var(--alternate-background-a);}
-#staff tr:nth-child(odd){background-color: var(--alternate-background-b);}
+.darkTable tr:nth-child(even){background-color: var(--alternate-background-a);}
+.darkTable tr:nth-child(odd){background-color: var(--alternate-background-b);}
 
-#rules {
-  border-right: 3px solid var(--border-main)
+#buttonStyleA {
+  color: white;
+  text-decoration: none;
+  border: 1.5px solid white;
+  background-color: rgba(0,0,0,0.15);
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
 }
 
-#staffListing {
-  border-left: 2px solid var(--border-main);
-  height: 40vh;
-  color: var(--text-color-main);
+/* CSS rules for few or one element(s)
+   From top of the page to the bottom */
+
+    /* Title Area */
+#intro {
+  margin: 0;
+  width: 100%;
+  height: 69vh;
+  padding-top: 21vh;
+  background-image: url('https://svgshare.com/i/5fh.svg');
 }
 
 #centerTitle {
@@ -56,10 +57,16 @@ h3 {
   text-align: center;
   color: white;
   border-radius: 12px;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.1);
   max-width: 50vh;
   padding: 1vh;
-  filter: hue-rotate(45deg)
+}
+
+@media only screen and (max-width: 768px) {
+    /* Change title area to fit the text on mobile phones */
+    #centerTitle {
+      height: 60%;
+    }
 }
 
 #title {
@@ -70,18 +77,7 @@ h3 {
   margin-bottom: 12px;
 }
 
-#intro {
-  margin: 0;
-  width: 100%;
-  height: 69vh;
-  padding-top: 21vh;
-  background-image: url('/sunset.svg');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  filter: hue-rotate(325deg);
-  animation: colorshift 30s infinite;
-  
-}
+    /* Bar right below title area */
 
 #stats {
   width: 100%;
@@ -99,28 +95,72 @@ h3 {
   line-height: 12px;
 }
 
-.dividerCell {
+    /* Everything below except footer */
+
+#mainContent {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+#mainContent div {
+  background-color: var(--main-background);
+  width: calc(30% - 21.5px);
+  padding: 10px;
+  text-align: center;
+}
+
+#mainContent .divider-row {
   width: 3px;
-}
-
-.divider {
-  height: 80%;
+  height: calc(30vh + 20px);
+  padding: 0;
   background-color: var(--border-main);
-  border-radius: 80px;
 }
 
-#buttonStyleA {
-  color: white;
-  text-decoration: none;
-  border: 1.5px solid white;
-  background-color: rgba(0,0,0,0.15);
-  border-radius: 10px;
-  padding: 5px 10px 5px 10px;
+#mainContent .spacer {
+  width: 20%;
+  padding: 0;
 }
 
-#discordDesc {
+@media only screen and (max-width: 768px) {
+    /* Set layout to one column and remove margin for mobile phones */
+    #mainContent div {
+        width: 100%;
+    }
+
+    #mainContent {
+      flex-wrap: wrap;
+    }
+
+    #mainContent .divider-row {
+      display: none;
+    } 
+
+    .spacer {
+      display: none;
+    }
+}
+
+#rules {
+  text-align: left;
+  margin-left: 1em;
+}
+
+#staff{
+  width: 80%;
   margin: auto;
 }
+
+#botInfo {
+  margin: auto;
+  width: 80%;
+}
+
+#botInfo td {
+  padding: 2px 4px 2px 4px;
+}
+
+    /* Footer */
 
 #footer {
   padding: 15px 0 40px 0;
@@ -130,15 +170,4 @@ h3 {
 #footer a {
   float: right;
   margin-right: 10px;
-}
-
-#flexboxContainer {
-	display: flex;
-}
-
-#flexboxContainer  flex-item {
-	background-color: var(--main-background);
-	width: 50%;
-	text-align: center;
-	padding-top: 10px;
 }
