--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,19 @@ h3 {
   width: 100%;
   height: 69vh;
   padding-top: 21vh;
-  background-image: url('https://svgshare.com/i/5fh.svg');
+  background-image: url('../sunset.svg');
+  animation-name: colorShift;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+
+}
+
+@keyframes colorShift {
+	0% {filter: hue-rotate(180deg);}
+	50% {filter: hue-rotate(255deg);}
+	100% {filter: hue-rotate(180deg);}
+
 }
 
 #centerTitle {
@@ -57,7 +69,7 @@ h3 {
   text-align: center;
   color: white;
   border-radius: 12px;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.4);
   max-width: 50vh;
   padding: 1vh;
 }
@@ -101,13 +113,27 @@ h3 {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  background-color: var(--main-background);
+  padding-bottom: 1%;
 }
 
-#mainContent div {
+
+#mainContent f-item {
+  background-color: var(--main-background);
+  width: calc(30% - 21.5px);
+  padding: 10px;
+  padding-bottom: 25px;
+  text-align: center;
+}
+
+
+#mainContent f-item:nth-of-type(odd) {
   background-color: var(--main-background);
   width: calc(30% - 21.5px);
   padding: 10px;
   text-align: center;
+  margin-left: 20%;
+  border-right: 3px solid var(--border-main);
 }
 
 #mainContent .divider-row {
@@ -117,15 +143,12 @@ h3 {
   background-color: var(--border-main);
 }
 
-#mainContent .spacer {
-  width: 20%;
-  padding: 0;
-}
-
 @media only screen and (max-width: 768px) {
     /* Set layout to one column and remove margin for mobile phones */
-    #mainContent div {
+    #mainContent f-item {
         width: 100%;
+        margin: 0;
+        border: 0;
     }
 
     #mainContent {
@@ -133,10 +156,6 @@ h3 {
     }
 
     #mainContent .divider-row {
-      display: none;
-    } 
-
-    .spacer {
       display: none;
     }
 }
@@ -147,13 +166,13 @@ h3 {
 }
 
 #staff{
-  width: 80%;
+  width: 95%;
   margin: auto;
 }
 
 #botInfo {
+  width: 95%;
   margin: auto;
-  width: 80%;
 }
 
 #botInfo td {
